# shaderbasics

./: CMakeLists.txt  README.md
include/glad/: glad.h
src/: main.cpp
src/glad/: glad.c
